prevent layout shift

--- a/_sass/post-card.scss
+++ b/_sass/post-card.scss
@@ -4,13 +4,22 @@
     gap: 1.7em;
     margin-bottom: 7.8em;
 
-    img {
+    .image-container {
         border: 1px solid $white-4;
         border-radius: 10px;
-        object-fit: cover;
-        margin-bottom: 0;
         flex: 1;
         aspect-ratio: 1 / 1;
+        position: relative;
+    }
+
+    .card-image {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        object-fit: cover;
+        margin-bottom: 0;
     }
 
     p {
